--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,49 +1,68 @@
+#---------------------------------------------------------------------
+# Example configuration for a possible web application.  See the
+# full configuration options online.
+#
+#   http://haproxy.1wt.eu/download/1.4/doc/configuration.txt
+#
+#---------------------------------------------------------------------
+
+#---------------------------------------------------------------------
+# Global settings
+#---------------------------------------------------------------------
 global
-        log 127.0.0.1   local0 info                     ##定义日志级别；
-        log 127.0.0.1   local1 notice
-        maxconn 4096            ##设定每个haproxy进程所接受的最大并发连接数
-        uid 99                  ##指定运行服务的用户和组
-        gid 99
-        daemon                  ##指定运行模式为daemon，以守护进程的方式工作在后台
+    # to have these messages end up in /var/log/haproxy.log you will
+    # need to:
+    #
+    # 1) configure syslog to accept network log events.  This is done
+    #    by adding the '-r' option to the SYSLOGD_OPTIONS in
+    #    /etc/sysconfig/syslog
+    #
+    # 2) configure local2 events to go to the /var/log/haproxy.log
+    #   file. A line like the following can be added to
+    #   /etc/sysconfig/syslog
+    #
+    #    local2.*                       /var/log/haproxy.log
+    #
+    log         127.0.0.1 local2
+
+    chroot      /var/lib/haproxy
+    pidfile     /var/run/haproxy.pid
+    maxconn     4000
+    user        haproxy
+    group       haproxy
+    daemon
+
+    # turn on stats unix socket
+    stats socket /var/lib/haproxy/stats
+
+#---------------------------------------------------------------------
+# common defaults that all the 'listen' and 'backend' sections will
+# use if not designated in their block
+#---------------------------------------------------------------------
 defaults
-        log     global                          ##采取global中的日志配置
-        mode    http                            ##默认的模式mode { tcp|http|health }，tcp是4层，http是7层，health只会返回OK
-        option  httplog                         ##采用http日志格式记录日志
-        option  dontlognull                     ##不记录健康检查的日志记录
-        option httpclose                        ##关闭保持连接
-        retries 3                               ##检查节点最多失败次数
-        maxconn 2000                            ##最大连接数，定义不得大于global中的值
-        contimeout      5000    ##连接超时时间，毫秒，在此期间，如若客户端与服务端无法成功建立连接，则断掉
-        clitimeout      50000   ##设置连接客户端发送数据时的成功连接最长等待时间，单位为毫秒，如若在这期间无法请求成功，则断掉
-        srvtimeout      50000   ##设置服务器端回应客户端数据发送的最长等待时间，如果在这期间还无法发送成功，则断掉
+    mode                    tcp#tcp
+    log                     global
+    option                  tcplog#tcplog
+    option                  dontlognull
+    option http-server-close
+    option forwardfor       except 127.0.0.0/8
+    option                  redispatch
+    retries                 3
+    timeout http-request    10s
+    timeout queue           1m
+    timeout connect         10s
+    timeout client          1m
+    timeout server          1m
+    timeout http-keep-alive 10s
+    timeout check           10s
+    maxconn                 3000
 
-##################无分离页面需求的配置##############
-#listen webcluster 0.0.0.0:80                   ##指定haproxy服务监听地址和端口
-#       option  httpchk GET /index.html         ##指定http请求方法和默认文件
-#       balance roundrobin                      ##指定轮询调度算法
-#       server  inst1 192.168.100.155:80 check inter 2000 fall 3                ##定义web节点，检测心跳频率，单位为毫秒，定义检查节点最多失败次数
-#       server  inst2 192.168.100.156:80 check inter 2000 fall 3
-
-##################有分离页面需求的配置##############
-frontend http                           ##定义名称为http
-        bind *:80                       ##指定监听地址和端口
-        acl staticweb hdr_end(host) -i 192.168.234.61                  ##指定类型为访问路径的域名，-i不区分大小写
-
-        acl static1 hdr_reg -i \.(css|png|jpg|jpeg|gif|ico|swf|xml|txt|pdf|do|jsp|js)$       ##调用正则表达式
-        acl static2 path_end -i .html .css .png .jpg .jpeg .xml       ##指定请求文件格式为.html
-
-        #acl linuxfan5 path_beg -i /WebRoot                              ##指定访问URL中的路径，如http://www.linuxfan.cn/WebRoot/index.jsp
-
-        use_backend dynamic if staticweb static1 static2
-
-        default_backend jingtai                                 ##默认的请求使用backend dongtai
-
-backend static         ##定义backend ：jingtai
-        mode http                       ##定义模式
-        balance roundrobin              ##定义调度算法为轮询
-        server 192.168.234.61 192.168.234.61:80 check inter 2000 fall 3 rise 3          ##定义节点
-
-backend dynamic
-        mode http
-        balance roundrobin
-        server 192.168.234.61 192.168.234.61:8080 check inter 2s fall 5 rise 3
+#---------------------------------------------------------------------
+# main frontend which proxys to the backends
+#---------------------------------------------------------------------
+listen k8s-6443
+        bind 192.168.234.61:6443
+        mode  tcp
+        server 192.168.234.31 192.168.234.31:6443 check inter 2s fall 3 rise 3
+        server 192.168.234.32 192.168.234.32:6443 check inter 2s fall 3 rise 3
+        server 192.168.234.33 192.168.234.33:6443 check inter 2s fall 3 rise 3
